--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Fondo marino nostálgico</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Sugerencias anti-caché para el navegador -->
+  <!-- Sugerencias anti-caché -->
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -54,28 +54,27 @@
       object-fit: cover;
       pointer-events: none;
       transform-origin: 50% 100%; /* ancladas abajo */
-      /* OJO: sin mask-image para evitar conflictos con iOS */
+      will-change: transform;
     }
 
-    /* Fondo — blur + efecto agua */
+    /* Fondo — desenfocadas, más suaves */
     .alga-bg {
       z-index: 0;
+      filter: blur(2px) saturate(0.8);
     }
 
-    /* Frente — efecto agua + puppet */
+    /* Frente — con movimiento de corriente */
     .alga-fg {
       z-index: 2;
-      filter: saturate(0.95) url(#agua-suave);
-      animation: corrientePuppet 12s ease-in-out infinite;
+      animation: corrienteSuave 10s ease-in-out infinite;
     }
 
-    /* Movimiento grupal de corriente */
-    @keyframes corrientePuppet {
-      0%   { transform: translateY(0px) rotate(0deg) skewX(0deg); }
-      25%  { transform: translateY(-6px) rotate(0.5deg) skewX(1.5deg); }
-      50%  { transform: translateY(-12px) rotate(1.2deg) skewX(3deg); }
-      75%  { transform: translateY(-6px) rotate(0.4deg) skewX(1.5deg); }
-      100% { transform: translateY(0px) rotate(0deg) skewX(0deg); }
+    @keyframes corrienteSuave {
+      0%   { transform: translateY(0px) skewX(0deg); }
+      25%  { transform: translateY(-6px) skewX(1.5deg); }
+      50%  { transform: translateY(-10px) skewX(3deg); }
+      75%  { transform: translateY(-6px) skewX(1.5deg); }
+      100% { transform: translateY(0px) skewX(0deg); }
     }
 
     /* ---------------------------------
@@ -92,45 +91,42 @@
     .particle {
       position: absolute;
       border-radius: 999px;
-      background: rgba(230, 245, 255, 0.7);
+      background: rgba(230, 245, 255, 0.8);
       mix-blend-mode: screen;
-      opacity: 0.25;
+      opacity: 0.2;
       animation-name: floatParticle;
       animation-timing-function: linear;
       animation-iteration-count: infinite;
-      will-change: transform;
+      will-change: transform, opacity;
     }
 
     @keyframes floatParticle {
       0% {
         transform: translate3d(0, 0, 0);
+        opacity: 0;
+      }
+      10% {
+        opacity: 0.25;
+      }
+      90% {
+        opacity: 0.25;
       }
       100% {
         transform: translate3d(var(--dx, 0px), -120vh, 0);
+        opacity: 0;
       }
     }
 
-    /* Overlay */
+    /* Overlay suave (sin grain pesado) */
     .overlay {
       position: absolute;
       inset: 0;
       pointer-events: none;
       background:
         radial-gradient(circle at 50% 15%, rgba(255,255,220,0.08) 0, transparent 55%),
-        linear-gradient(to bottom, rgba(10,35,45,0.50), rgba(0,0,0,0.75));
+        linear-gradient(to bottom, rgba(10,35,45,0.45), rgba(0,0,0,0.7));
       mix-blend-mode: soft-light;
       z-index: 4;
-    }
-
-    /* Grano */
-    .grain {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      opacity: 0.16;
-      mix-blend-mode: soft-light;
-      z-index: 5;
-      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 160 160' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.9'/%3E%3C/svg%3E");
     }
   </style>
 </head>
@@ -141,36 +137,7 @@
     <div class="particles" id="particles-layer"></div>
 
     <div class="overlay"></div>
-    <div class="grain"></div>
   </div>
-
-  <!-- --------------------------
-       FILTRO DE AGUA
-       -------------------------- -->
-  <svg width="0" height="0" style="position:absolute">
-    <defs>
-      <filter id="agua-suave" x="0" y="0" width="100%" height="100%">
-        <feTurbulence
-            type="fractalNoise"
-            baseFrequency="0.015 0.035"
-            numOctaves="2"
-            seed="4"
-            result="noise">
-          <animate attributeName="baseFrequency"
-                   dur="14s"
-                   values="0.015 0.035; 0.020 0.040; 0.015 0.035"
-                   repeatCount="indefinite"/>
-        </feTurbulence>
-
-        <feDisplacementMap
-            in="SourceGraphic"
-            in2="noise"
-            scale="10"
-            xChannelSelector="R"
-            yChannelSelector="G" />
-      </filter>
-    </defs>
-  </svg>
 
   <!-- ------------------------------------
        JAVASCRIPT
@@ -181,3 +148,208 @@
       "algas/algas 2.png",
       "algas/algas 3.png",
       "algas/algas 4.png",
+      "algas/algas 5.png"
+    ];
+
+    const container = document.getElementById("sea-container");
+    const particlesContainer = document.getElementById("particles-layer");
+
+    let bgImages = [];
+    let fgImages = [];
+
+    // flags para entrada elegante
+    let bgReady = false;
+    let fgReady = false;
+    let hasRevealed = false;
+
+    function random(min, max) {
+      return min + Math.random() * (max - min);
+    }
+
+    function resetRevealState() {
+      bgReady = false;
+      fgReady = false;
+      hasRevealed = false;
+      container.classList.remove("visible");
+    }
+
+    function tryRevealScene() {
+      if (bgReady && fgReady && !hasRevealed) {
+        hasRevealed = true;
+        requestAnimationFrame(() => {
+          container.classList.add("visible");
+        });
+      }
+    }
+
+    function createSea() {
+      container.querySelectorAll("img.alga").forEach(img => img.remove());
+      bgImages = [];
+      fgImages = [];
+
+      resetRevealState();
+      createBackgroundAlgae();
+      createForegroundAlgae();
+    }
+
+    /* ----- FONDO ----- */
+    function createBackgroundAlgae() {
+      const count = Math.floor(random(8, 14)); // un poco menos que antes
+      let loaded = 0;
+
+      for (let i = 0; i < count; i++) {
+        const src = algaeSources[Math.floor(Math.random() * algaeSources.length)];
+        const img = document.createElement("img");
+        img.className = "alga alga-bg";
+        img.src = src;
+
+        img.style.opacity = random(0.25, 0.45).toFixed(2);
+
+        if (Math.random() < 0.5) img.style.transform = "scaleX(-1)";
+
+        img.onload = () => {
+          loaded++;
+          if (loaded === count) layoutBackgroundAlgae();
+        };
+
+        bgImages.push(img);
+        container.insertBefore(img, container.firstChild);
+      }
+    }
+
+    function layoutBackgroundAlgae() {
+      if (!bgImages.length) return;
+
+      const vh = window.innerHeight;
+      const vw = window.innerWidth;
+
+      const totalHeight = vh * 1.05;  // un poquito más que la pantalla
+      const topOffset  = -vh * 0.05;  // subidas 5%
+
+      let currentX = random(0.05 * vw, 0.1 * vw);
+
+      bgImages.forEach(img => {
+        const ratio = img.naturalWidth / img.naturalHeight || 0.4;
+
+        let width = vh * ratio * 0.9;
+        const maxWidth = vw * 0.35;
+        if (width > maxWidth) width = maxWidth;
+
+        if (currentX + width > vw - 0.05 * vw) {
+          img.remove();
+          return;
+        }
+
+        img.style.height = totalHeight + "px";
+        img.style.width  = width + "px";
+        img.style.top    = topOffset + "px";
+        img.style.left   = currentX + "px";
+
+        const gap = random(0.10 * vw, 0.20 * vw);
+        currentX += width + gap;
+      });
+
+      bgReady = true;
+      tryRevealScene();
+    }
+
+    /* ----- FRENTE ----- */
+    function createForegroundAlgae() {
+      const count = Math.floor(random(6, 10)); // menos para aligerar
+      let loaded = 0;
+
+      for (let i = 0; i < count; i++) {
+        const src = algaeSources[Math.floor(Math.random() * algaeSources.length)];
+        const img = document.createElement("img");
+        img.className = "alga alga-fg";
+        img.src = src;
+
+        img.style.opacity = random(0.55, 0.8).toFixed(2);
+        if (Math.random() < 0.5) img.style.transform = "scaleX(-1)";
+
+        img.onload = () => {
+          loaded++;
+          if (loaded === count) layoutForegroundAlgae();
+        };
+
+        fgImages.push(img);
+        container.insertBefore(img, container.querySelector(".overlay"));
+      }
+    }
+
+    function layoutForegroundAlgae() {
+      if (!fgImages.length) return;
+
+      const vh = window.innerHeight;
+      const vw = window.innerWidth;
+
+      const segments = fgImages.length - 1 || 1;
+      const segmentWidth = vw / segments;
+
+      const totalHeight = vh * 1.05;
+      const topOffset  = -vh * 0.05;
+
+      fgImages.forEach((img, i) => {
+        const ratio = img.naturalWidth / img.naturalHeight || 0.4;
+        const width = vh * ratio * 1.0;
+
+        const center = i * segmentWidth + random(-segmentWidth * 0.15, segmentWidth * 0.15);
+        const left   = center - width / 2;
+
+        img.style.height = totalHeight + "px";
+        img.style.width  = width + "px";
+        img.style.left   = left + "px";
+        img.style.top    = topOffset + "px";
+      });
+
+      fgReady = true;
+      tryRevealScene();
+    }
+
+    /* ----- PARTÍCULAS ----- */
+    function createParticles() {
+      if (!particlesContainer) return;
+
+      particlesContainer.innerHTML = "";
+
+      const count = 35; // menos partículas para iPad
+      for (let i = 0; i < count; i++) {
+        const p = document.createElement("div");
+        p.className = "particle";
+
+        const size = random(2, 4);
+        p.style.width = size + "px";
+        p.style.height = size + "px";
+
+        const left = random(0, 100);
+        const startY = random(0, 100);
+        p.style.left = left + "vw";
+        p.style.top = startY + "vh";
+
+        const dx = random(-14, 14).toFixed(1) + "px";
+        p.style.setProperty("--dx", dx);
+
+        const dur = random(20, 40).toFixed(1) + "s";
+        const delay = random(-40, 0).toFixed(1) + "s";
+
+        p.style.animationDuration = dur;
+        p.style.animationDelay = delay;
+        p.style.opacity = random(0.1, 0.35).toFixed(2);
+
+        particlesContainer.appendChild(p);
+      }
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+      createSea();
+      createParticles();
+    });
+
+    window.addEventListener("resize", () => {
+      layoutBackgroundAlgae();
+      layoutForegroundAlgae();
+      createParticles();
+    });
+  </script>
+</body>
+</html>
